6703377: freetype: glyph vector outline is not translated correctly

Reviewed-by: bae, prr